# piano-code

./: .gitignore  README.md  main.py  requirements.txt
.claude/: settings.local.json
code/: config.py  keyboard_interface.py  piano_gui.py  piano_sound.py
config/: a_as_la_layout.json  a_as_mi_layout.json  a_as_so_layout.json  keyboard_layout.json  user_preferences.json
rust/: Cargo.toml  README.md
rust/src/: audio.rs  config.rs  gui.rs  lib.rs  main.rs
test/: key_ord_test.py  ode_to_joy.json  test_piano_sound.py  test_sound_carch_channel_number.py
