[package]
name = "piano_sim"
version = "0.1.0"
edition = "2021"

[lib]
name = "piano_code"  # this controls the crate (library) name
path = "src/lib.rs"

[[bin]]
name = "piano_sim"
path = "src/main.rs"

[dependencies]
# GUI Framework
eframe = "0.27"
egui = "0.27"


# Audio processing
rodio = "0.18"
cpal = "0.15"

# Configuration and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Collections and utilities (using std::collections)